feat: resolved exception handling, exception id not found

--- a/src/CashFlow.Exception/ResourceErrorMessages.fr.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.fr.resx
@@ -138,4 +138,7 @@
   <data name="EXPENSES_CANNOT_BE_IN_FUTURE" xml:space="preserve">
     <value>Les dépenses ne peuvent pas être pour l’avenir.</value>
   </data>
+  <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
+    <value />
+  </data>
 </root>
