--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -138,4 +138,7 @@
   <data name="EXPENSES_CANNOT_BE_IN_FUTURE" xml:space="preserve">
     <value>Expenses cannot be in the future</value>
   </data>
+  <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
+    <value>Expense not found.</value>
+  </data>
 </root>
