--- a/src/CashFlow.Exception/ResourceErrorMessages.fr.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.fr.resx
@@ -139,6 +139,18 @@
     <value>Les dépenses ne peuvent pas être pour l’avenir.</value>
   </data>
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
+    <value>Aucune dépense n'a été trouvée.</value>
+  </data>
+  <data name="NAME_EMPTY" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EMAIL_EMPTY" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EMAIL_INVALID" xml:space="preserve">
+    <value />
+  </data>
+  <data name="PASSWORD_INVALID" xml:space="preserve">
     <value />
   </data>
 </root>
