--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
@@ -141,4 +141,16 @@
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
     <value>A despesa não foi encontrada.</value>
   </data>
+  <data name="NAME_EMPTY" xml:space="preserve">
+    <value>O nome não pode ficar em branco.</value>
+  </data>
+  <data name="EMAIL_EMPTY" xml:space="preserve">
+    <value>O email não pode ficar em branco.</value>
+  </data>
+  <data name="EMAIL_INVALID" xml:space="preserve">
+    <value>O email não é válido.</value>
+  </data>
+  <data name="PASSWORD_INVALID" xml:space="preserve">
+    <value>Sua senha deve ter pelo menos 8 caracteres, contendo pelo menos uma letra maiúscula, uma letra minúscula, um número e um caractere especial (por exemplo, !, ?, *, .).</value>
+  </data>
 </root>
