--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-PT.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-PT.resx
@@ -139,6 +139,18 @@
     <value>As despesas não podem ser para o futuro.</value>
   </data>
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
+    <value>Nenhuma despesa foi encontrada.</value>
+  </data>
+  <data name="NAME_EMPTY" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EMAIL_EMPTY" xml:space="preserve">
+    <value />
+  </data>
+  <data name="EMAIL_INVALID" xml:space="preserve">
+    <value />
+  </data>
+  <data name="PASSWORD_INVALID" xml:space="preserve">
     <value />
   </data>
 </root>
