feat: implemented user persistence method in the database

--- a/src/CashFlow.Exception/ResourceErrorMessages.fr.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.fr.resx
@@ -153,4 +153,7 @@
   <data name="PASSWORD_INVALID" xml:space="preserve">
     <value />
   </data>
+  <data name="EMAIL_ALREADY_EXISTS" xml:space="preserve">
+    <value />
+  </data>
 </root>
