--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
@@ -156,4 +156,7 @@
   <data name="EMAIL_ALREADY_EXISTS" xml:space="preserve">
     <value>O email já existe.</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>O email ou a senha são inválidos.</value>
+  </data>
 </root>
