--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -156,4 +156,7 @@
   <data name="EMAIL_ALREADY_EXISTS" xml:space="preserve">
     <value>This email already exists.</value>
   </data>
+  <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
+    <value>Email or password invalid.</value>
+  </data>
 </root>
