--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-BR.resx
@@ -159,4 +159,7 @@
   <data name="EMAIL_OR_PASSWORD_INVALID" xml:space="preserve">
     <value>O email ou a senha são inválidos.</value>
   </data>
+  <data name="PASSWORD_DIFFERENT_CURRENT_PASSWORD" xml:space="preserve">
+    <value>A senha inserida é diferente da senha atual.</value>
+  </data>
 </root>
