--- a/src/CashFlow.Exception/ResourceErrorMessages.pt-PT.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.pt-PT.resx
@@ -162,4 +162,7 @@
   <data name="PASSWORD_DIFFERENT_CURRENT_PASSWORD" xml:space="preserve">
     <value />
   </data>
+  <data name="TAG_TYPE_NOT_SUPPORTED" xml:space="preserve">
+    <value />
+  </data>
 </root>
